# bgl-game-pot

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/: .env  file-filters.yml
.github/workflows/: build-rust-client.yml
clients/js/: CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml
clients/js/bench/: _setup.ts  createPot.ts
clients/js/src/: plugin.ts
clients/js/test/: _setup.ts  closePot.test.ts  createPot.test.ts  getProgram.test.ts  payInSol.test.ts  payInSplToken.test.ts  payOutSol.test.ts  payOutSplToken.test.ts  popParticipant.test.ts
clients/rust/: CONTRIBUTING.md  Cargo.toml  README.md
clients/rust/src/: lib.rs
clients/rust/tests/: create.rs
configs/: kinobi.cjs  shank.cjs  validator.cjs
configs/scripts/program/: dump.sh
idls/: bgl_game_pot_program.json
programs/bgl-game-pot/: Cargo.toml  README.md
programs/bgl-game-pot/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
programs/bgl-game-pot/src/processor/: close_pot.rs  create_pot.rs  mod.rs  pay_in_sol.rs  pay_in_spl_token.rs  pay_out_sol.rs  pay_out_spl_token.rs  pop_participant.rs
programs/bgl-game-pot/src/utils/: account.rs  assertions.rs  mod.rs
