[package]
edition = "2021"
license-file = "../../LICENSE"
name = "bgl-game-pot"
readme = "README.md"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]

[features]
serde = ["dep:serde", "dep:serde_with"]
test-sbf = []

[dependencies]
borsh = "0.10"
num-derive = "0.4.2"
num-traits = "0.2.19"
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_with = { version = "^3.0", optional = true }
solana-program = "2.0.13"
thiserror = "^1.0"

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = "2.0.13"
solana-sdk = "2.0.13"
