[package]
edition = "2021"
license-file = "../../LICENSE"
name = "bgl-game-pot-program"
publish = false
readme = "./README.md"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "1.5.1"
num-derive = "^0.4.2"
num-traits = "0.2.19"
shank = "0.4.2"
solana-program = "2.0.13"
spl-associated-token-account = { version = "5.0.1", features = [
  "no-entrypoint",
] }
spl-token = { version = "6.0.0", features = ["no-entrypoint"] }
thiserror = "^1.0"
